fix alignment and resizing

--- a/src/css/_city-details.scss
+++ b/src/css/_city-details.scss
@@ -5,11 +5,10 @@
     background-color: white;
     border: 1px solid gray;
     width: 30%;
-    height: 60%;
+    height: auto;
   
-    top: 10%;
-    left: 50%;
-    transform: translate( 50%, 0%);
+    top: 4rem;
+    right: 1rem;
     overflow: auto;
     // display: none;
   
